@@ -1,24 +1,25 @@
 
+
 package dw.gameshop.model;
 
-import jakarta.persistence.Column;
-import jakarta.persistence.Entity;
-import jakarta.persistence.Id;
-import jakarta.persistence.Table;
+import jakarta.persistence.*;
 import lombok.AllArgsConstructor;
 import lombok.Getter;
 import lombok.NoArgsConstructor;
+import lombok.Setter;
 import org.springframework.security.core.GrantedAuthority;
 import org.springframework.security.core.authority.SimpleGrantedAuthority;
 import org.springframework.security.core.userdetails.UserDetails;
 
 import java.time.LocalDateTime;
 import java.util.Collection;
+import java.util.Collections;
 import java.util.List;
 
 @NoArgsConstructor
 @AllArgsConstructor
 @Getter
+@Setter
 @Entity
 @Table(name="user")
 public class User implements UserDetails {
@@ -31,12 +32,19 @@ public class User implements UserDetails {
     private String userEmail;
     @Column(name="password")
     private String password;
+    @ManyToOne
+    @JoinColumn(name = "user_authority")
+    private Authority authority;
     @Column(name="created_at", updatable = false)
     private LocalDateTime createdAt;
 
     @Override
     public Collection<? extends GrantedAuthority> getAuthorities() {
-        return List.of(new SimpleGrantedAuthority("user"));
+        //getAuthorities() : 필수적으로 사용하는 메서드 : 권한
+        //왜 우리가 getAuthorities를 만들어야 하며 필드를 가져야하는가
+        return Collections.singletonList(
+                new SimpleGrantedAuthority(authority.getAuthorityName())
+        );
     }
 
     @Override
